updated the login and register and nav

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -27,6 +27,10 @@
             <a class="nav-link" href="/Courses">Courses</a>
           </li>
         </ul>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item"><a class="nav-link" href="/Register">Register</a></li>
+          <li class="nav-item"><a class="nav-link" href="/Login">Login</a></li>          
+        </ul>
       </div>
     </nav>
     {{{body}}}
